k8s/fd-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fd-service-deployment
  namespace: fd-banking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fd-service
  template:
    metadata:
      labels:
        app: fd-service
    spec:
      containers:
        - name: fd-service
          image: fd-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
