k8s/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-ui-service
  namespace: fd-banking
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: angular-ui
