k8s/fd-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fd-service
  namespace: fd-banking
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: fd-service
