k8s/notification-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-mysql-deployment
  namespace: fd-banking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-mysql
  template:
    metadata:
      labels:
        app: notification-mysql
    spec:
      containers:
        - name: notification-mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: notification-mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: notification-mysql-storage
          persistentVolumeClaim:
            claimName: notification-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: notification-mysql-service
  namespace: fd-banking
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: notification-mysql
